--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,15 @@
   <body>
     <%- include('./partials/header') %>
     <!-- PLANTILLA -->
-    <section id="contenedor" class="container">
-      <div class="centro index">
+      <div class="centro">
         <h3>Fijadas</h3>
         <div id="guardada">
           <%- include('./partials/cicloForNotas') %>
           <a href="/notas/formularioNota">
-            <button class="btn-1"><i class="fas fa-pencil fa-2x"></i></button>
+            <button class="btn-1"><i class="fas fa-edit fa-2x"></i></button>
           </a>
         </div>
       </div>
-    </section>
 
     <%- include('./partials/footer') %>
   </body>
