--- a/views/notas/editarNota.ejs
+++ b/views/notas/editarNota.ejs
@@ -4,39 +4,41 @@
   <body onload="focus()">
     <%- include('../partials/header') %>
 
-    <section id="formulario" class="container">
-      <div class="titulo">
-        <span id="mensaje"></span>
+
+    
+    <div class="centro contenedor">
+      <a href="/" class="home">
+        <i class="fas fa-home fa-2x"></i>
+      </a>
+      <div class="contenedorContenido">
+        <h1>Editar</h1>
+        <div class="contenedorFormulario">
+          <form action="/notas/<%= nota.id %>" method="post">
+              <input
+                autofocus
+                type="text"
+                placeholder="Titulo"
+                id="titulo"
+                name="titulo"
+                value="<%= nota.titulo %>"
+              />
+              <textarea
+                placeholder="Ingresa tu mensaje"
+                id="textarea"
+                name="textarea"
+                >
+                <%= nota.textarea %>
+              </textarea>
+              <button class="submit" type="submit">
+                <i class="fas fa-save"></i>Guardar
+              </button>
+              <span id="mensaje"></span>
+            </form>
+        </div>
       </div>
-      <div class="centro centroForm">
-        <a href="/" class="volver">
-          <i class="fas fa-home fa-2x"></i>
-        </a>
-        <form action="/notas/<%= nota.id %>" method="post">
-          <input
-            autofocus
-            type="text"
-            placeholder="Titulo"
-            id="titulo"
-            name="titulo"
-            value="<%= nota.titulo %>"
-          />
-
-          <textarea
-            placeholder="Ingresa tu mensaje"
-            id="textarea"
-            name="textarea"
-          >
-          <%= nota.textarea %>
-          </textarea>
-
-          <button class="submit" type="submit">
-            <i class="fas fa-save"></i>Guardar
-          </button>
-        </form>
       </div>
     </section>
-
+    
     <%- include('../partials/footer') %>
   </body>
 </html>
