--- a/views/partials/cicloForNotas.ejs
+++ b/views/partials/cicloForNotas.ejs
@@ -1,19 +1,19 @@
 <% for (let index = 0; index < notas.length; index++) { %>
-<div class="abrirNuevo">
+<div class="abrirNuevo dropdown">
   <h2><%= notas[index].titulo %></h2>
   <p><%= notas[index].textarea %></p>
-  <ul class="principalUl">
-    <li class="dropdown navbar-content">
-      <ul class="editarBorrar">
+  <ul>
+    <li>
+      <ul class="dropdownContenido">
         <a href="/notas/detalle/<%= notas[index].id %>">
-          <li class="editar-content">Detalle</li>
+          <li class="dropdownLi">Detalle</li>
         </a>
         <a href="/notas/editarNota/<%= notas[index].id %>">
-          <li class="editar-content">Editar</li>
+          <li class="dropdownLi">Editar</li>
         </a>
         <form action="/notas/borrar/<%= notas[index].id %>" method="post">
-          <li class="editar-content">
-            <input type="submit" value="Borrar" />
+          <li class="dropdownLi">
+            <input type="submit" value="Borrar" class="dropdownLi"/>
           </li>
         </form>
       </ul>
