--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8" />
-  <title><%= title %></title>
+  <title><%= title %> - Bloc de Notas</title>
   <!-- fontawesome -->
   <script
     src="https://kit.fontawesome.com/a42b43434c.js"
