--- a/views/preguntas.ejs
+++ b/views/preguntas.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head') %>
-  <body>
-    <%- include('./partials/header') %>
-    <!-- como hacer un index -->
 
-    <div class="faq container">
-      <div class="centro">
-        <a href="/" class="volver">
+  <%- include('./partials/head') %>
+
+<body>
+    <%- include('./partials/header') %>
+      
+    <!-- como hacer un index -->
+      <div class="centro preguntas">
+        <a href="/" class="home">
           <i class="fas fa-home fa-2x"></i>
         </a>
         <h2>Preguntas Frecuentes</h2>
@@ -60,7 +61,6 @@
           lo posible para ayudarte.
         </p>
       </div>
-    </div>
     <%- include('./partials/footer') %>
   </body>
 </html>
