--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap");
 :root {
   --letra: "Roboto Slab", serif;
+  --box-shadow:#666;
+  --text-shadow:#fff;
+  --background-body:#fff;
+  --color-letra:#666;
+  --fondo-amarillo:#f5d03f;
 }
 
 * {
@@ -17,11 +22,38 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background: url("/img/fondohtml.jfif");
-
-  /* HEADER */
 }
+h1{
+  font-size: 2.5rem;
+}
+h2{
+  font-size: 2rem;
+}
+h3{
+  font-size: 1.5rem;
+}
+h4{
+  font-size: 1.5rem;
+}
+.home {
+  position: absolute;
+  top: 10rem;
+  left: 1rem;
+  padding: .5rem;
+  border-radius: 50%;
+}
+.home i {
+  color: #000;
+}
+.home:hover i {
+  color: #fff;
+}
+.home:hover {
+  background-color: #000;
+}
+/* HEADER */
 header {
-  background-color: #f5d03f;
+  background-color: var(--fondo-amarillo);
   position: fixed;
   top: 0;
   right: 0;
@@ -30,88 +62,90 @@ header {
   max-width: 1200px;
   margin: 0 auto;
 }
-.logo-h1 {
+.headerContenido{
   display: flex;
   align-items: center;
-  margin-left: 35px;
-  text-shadow: 0 2px 0.3rem #222222;
-}
-.logo-h1 img {
-  width: 110px;
-  height: 110px;
-  padding: 15px;
+  text-shadow: 1px 2px 0.3rem var(--text-shadow);
+  gap: 2rem;
+  padding: 1rem 0 1rem 2rem;
 }
 
-/* DROPDOWN */
+/* NAVBAR */
+.navbar a {
+  color: #ebebeb;
+}
 .navbar {
   display: flex;
   position: relative;
   width: 100%;
 }
-.navbar .principalUl {
+.navbarContenido {
   background-color: #333;
   display: flex;
   width: 100%;
 }
-
-.navbar a {
-  color: #ebebeb;
-}
-.navbar ul li {
+.navbarContenido .navbar-li {
   padding: 10px 0;
   margin-left: 0.5rem;
   cursor: pointer;
 }
-.navbar .navbar-content a {
+.navbar-li a {
   border: 0.2rem solid transparent;
   border-radius: 0.3rem;
   padding: 0.2rem;
 }
-.navbar .navbar-content a:hover {
+.navbar-li a:hover {
   border-color: #666;
 }
-.dropdown ul li:not(:last-child) {
-  border-bottom: 0.1rem solid #000;
-}
-.dropdown ul {
+.dropdownContenido {
   display: none;
   position: absolute;
   z-index: 1;
   background-color: rgb(235, 235, 235);
   border-radius: 10px;
 }
-.dropdown ul li {
+
+.dropdownLi {
   color: #1e1e1e;
   padding: 0.5rem;
   margin: 0;
   text-align: center;
 }
-.dropdown:hover ul:not(.editarBorrar) {
+.dropdownContenido .dropdownLi:not(:last-child) {
+  border-bottom: 0.1rem solid #000;
+}
+.dropdown:hover .dropdownContenido{
   display: block;
   margin-top: 0.5rem;
 }
-.editar-content:hover {
-  text-shadow: 1px 1px 0.2rem #989898;
+.dropdownLi:hover {
+  text-shadow: 1px 1px 1rem #5d5d5d;
 }
-.editarBorrar {
-  display: none;
+.dropdownLi{
+  border: none;
+  font-size: 1rem;
+  color: var(--color-letra);
+  font-weight: 600;
+  cursor: pointer;
 }
+/* FIN DROPDOWN */
 
-.principalColores {
+.contenedorColores {
   display: flex;
   position: absolute;
-  right: 5%;
-  top: 10%;
+  right: .5rem;
+  top: .2rem;
   gap: 1rem;
 }
 .contenedorColor {
   padding: 1rem;
   border-radius: 100%;
-  border: 0.1rem solid #fff;
+  border: 0.1rem solid transparent;
   cursor: pointer;
 }
 .contenedorColor:hover {
   transform: scale(1.08);
+  border-color: #0ff;
 }
 .yellow {
   background-color: yellow;
@@ -125,72 +159,74 @@ header {
 .white {
   background-color: #ebebeb;
 }
+/* FIN NAVBAR */
+
+.centro {
+  background-color: white;
+  padding: 10rem 1rem 1rem 1rem;
+  position: relative;
+  color: var(--color-letra);
+}
+
+/* PREGUNTAS FRECUENTES */
+.preguntas h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.preguntas li {
+  list-style-type: square;
+}
+.preguntas h3 {
+  margin-top: 40px;
+}
+.preguntas ol {
+  margin-left: 40px;
+}
 
 /* incio de sesion */
-.conteinerInicioSesion {
-  background-color: #fff;
-}
-#registrarse,
-#recuperarContrasena {
-  display: none;
-}
 
-.volver {
-  position: absolute;
-  top: 10rem;
-  left: 1%;
-  padding: 1rem;
-  border-radius: 50%;
-}
-.detalle{
-  top:1rem;
-}
-.formulario{
-  top:5rem;
-}
-.volver i {
-  color: #000;
-}
-.volver:hover i {
-  color: #fff;
-}
-.volver:hover {
-  background-color: #000;
-}
-.conteiner {
-  height: 100vh;
+.contenedor {
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: center;
 }
-.conteinerContent {
-  background-color: rgb(70, 70, 70);
-  border: 0.1rem solid #fff;
-  border-radius: 0.5rem;
-  padding: 1rem 2rem 1rem 2rem;
+.contenedorContenido {
+  background-color: var(--fondo-amarillo);
+  padding: 1rem 2rem;
   font-weight: 600;
   text-align: center;
-  width: 450px;
+  width: 400px;
   color: #fff;
   margin-bottom: 2rem;
-  transform: scale(0.8);
 }
-
-.conteinerContent h1 {
-  font-size: 2.5rem;
+.contenedorContenido h1 {
   margin-bottom: 2rem;
-  color: #fff;
 }
-.contenidoinicioSesion {
+.contenedorFormulario {
   display: flex;
   flex-direction: column;
 }
-
+.contenedorFormulario p {
+  text-align: center;
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+}
+.contenedorFormulario a {
+  text-decoration: none;
+  color: rgb(242, 255, 0);
+  font-weight: 700;
+  margin-left: 3px;
+  text-transform: capitalize;
+}
+.contenedorFormulario a:hover {
+  color: rgb(212, 198, 0);
+}
 form {
   display: flex;
   flex-direction: column;
   line-height: 1;
+  width: 100%;
 }
 .absolute {
   width: 100%;
@@ -201,7 +237,6 @@ form {
   border-bottom: 1px solid #fff;
   margin: 0 auto;
 }
-
 .absolute label {
   position: absolute;
   top: 50%;
@@ -212,7 +247,6 @@ form {
   transition: 0.5s;
   color: #ababab;
 }
-
 .absolute input:focus + label,
 .absolute label.active {
   top: 3px;
@@ -240,12 +274,7 @@ form {
   right: 0;
   font-size: 1.2rem;
 }
-.centroForm {
-  margin-top: 4rem;
-}
-.centroForm .submit i {
-  margin-right: 0.5rem;
-}
+
 form button {
   color: white;
   padding: 0.5rem;
@@ -270,7 +299,6 @@ form .reset {
 form .reset:hover {
   background-color: rgb(218, 2, 2);
 }
-
 .recuerdame {
   display: flex;
   align-items: center;
@@ -278,23 +306,6 @@ form .reset:hover {
   gap: 0.5rem;
   margin: 0.5rem 0;
 }
-
-.contenidoinicioSesion p {
-  text-align: center;
-  margin-top: 0.5rem;
-  font-size: 0.9rem;
-}
-.contenidoinicioSesion a {
-  text-decoration: none;
-  color: rgb(242, 255, 0);
-  font-weight: 700;
-  margin-left: 3px;
-  text-transform: capitalize;
-}
-.contenidoinicioSesion a:hover {
-  color: rgb(212, 198, 0);
-}
-
 .btn-redSocial {
   display: flex;
   flex-direction: column;
@@ -306,7 +317,7 @@ form .reset:hover {
   height: 2.5rem;
   text-align: center;
   border-radius: 0.3rem;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 0.5rem;
   display: flex;
   align-items: center;
@@ -323,171 +334,88 @@ form .reset:hover {
   width: 35px;
   margin-left: -15px;
 }
-
 .btn-redSocial .fb img {
   width: 35px;
 }
-#recuperarContrasena .conteinerContent {
-  width: 600px;
-  padding: 50px;
-}
-#recuperarContrasena h3 {
-  margin-top: 1rem;
-}
-#recuperarContrasena form {
-  margin: 0 auto;
-  width: 90%;
-}
-
 /* fin incio de sesion */
 
 /* MAIN */
 
-.container {
-  position: relative;
-  padding: 1rem;
-  border: 0.1rem solid #000;
-  background-color: #ebebeb;
-}
-.centro {
-  background-color: white;
-  border: 1px solid #000;
-  border-radius: 3px;
-  padding: 15px;
-  position: relative;
-  height: auto;
-}
-.centro .detalle,
-.centro .detalle {
-  text-align: center;
-}
-.centro .detalle{
-  margin-bottom: 2rem;
-}
-.centro .detalle{
-  margin-top: 2rem;
-}
-.container .index {
-  height: 100vh;
-}
-.container h3 {
-  margin: 10rem 0 0 2rem;
-  font-size: 800;
-}
+/* NOTAS FIJADAS*/
 
+#guardada {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+#guardada div {
+  border: .1rem solid #000;
+  width: 150px;
+  height: 150px;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin-top: 2rem;
+  cursor: pointer;
+  color: var(--color-letra);
+}
+.abrirNuevo {
+  box-shadow: 1px 2px 0.2rem var(--box-shadow);
+  position: relative;
+}
+.abrirNuevo h2,
+.abrirNuevo p {
+  text-transform: capitalize;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.abrirNuevo:hover {
+  transform: scale(1.05);
+}
 .btn-1 {
   position: absolute;
-  bottom: 10%;
-  right: 10%;
-  padding: 1.5rem;
+  bottom: .5rem;
+  right: 1rem;
+  padding: 1rem;
   cursor: pointer;
   border: none;
   border-radius: 25%;
   background: radial-gradient(circle at center, #fff 2%, rgb(243, 232, 42));
   margin-bottom: 1rem;
-  box-shadow: 0 0 0.5rem #666;
+  box-shadow: 0 0 0.5rem var(--box-shadow);
   z-index: 1;
 }
 .btn-1:hover {
   transform: scale(1.05);
 }
-
-/* DIV de NOTAS  */
-#guardada {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: center;
-}
-#guardada div {
-  border: 1px solid #000;
-  width: 150px;
-  height: 150px;
-  border-radius: 5px;
-  padding: 1rem;
-  margin-top: 2rem;
-  cursor: pointer;
-}
-#guardada .abrirNuevo h2,
-#guardada .abrirNuevo p {
-  margin-top: 0.5rem;
-  text-transform: capitalize;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  color: #666;
-}
-.abrirNuevo {
-  box-shadow: 1px 2px 0.2rem #666;
-  position: relative;
-}
-.abrirNuevo h2 {
-  color: white;
-}
-.abrirNuevo:hover {
-  transform: scale(1.05);
-}
-.abrirNuevo:hover .editarBorrar {
-  display: initial;
+.contenedorDetalle {
+  text-align: center;
 }
 
 /* FORMULARIO */
-#formulario .titulo {
+.contenedorFormulario #titulo,
+.contenedorFormulario, #textarea {
   display: flex;
-  gap: 5rem;
+  padding: .5rem;
   align-items: center;
-}
-#formulario .titulo span {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-input::placeholder {
-  font-size: 18px;
-}
-textarea::placeholder {
-  font-size: 18px;
-}
-input::placeholder {
-  text-transform: uppercase;
-  color: #000;
-}
-#formulario input {
-  padding: 0.2rem;
-  font-size: 2rem;
-}
-#formulario textarea {
-  padding: 0.2rem;
-  height: 350px;
+  font-size: 1rem;
   resize: none;
   outline: none;
-  font-size: 1.5rem;
+  font-weight: bold;
 }
-
-#formulario form {
-  width: 50%;
-  margin: 8rem auto;
+.contenedorFormulario span {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 1rem;
 }
-
-/* PREGUNTAS FRECUENTES */
-.faq {
-  color: #666;
+input::placeholder {
+  font-size: 1rem;
 }
-.faq h2 {
-  font-size: 32px;
-  text-align: center;
-  margin-bottom: 20px;
-  margin-top: 11rem;
+textarea::placeholder {
+  font-size: 1rem;
 }
-.faq li {
-  list-style-type: square;
-}
-.faq h3 {
-  font-size: 24px;
-  margin-top: 40px;
-}
-
-.faq ol {
-  margin-left: 40px;
+.contenedorFormulario textarea {
+  height: 250px;
 }
 
 /*FOOTER*/
@@ -495,18 +423,8 @@ input::placeholder {
   background: black;
   text-align: center;
   padding: 0.8rem;
+  color: white;
 }
-
-.footer h3 {
-  color: #ffffff;
-  font-size: 1rem;
-}
-
-.footer p {
-  color: #ffffff;
-  font-size: 1rem;
-}
-
 .icon-footer {
   display: flex;
   justify-content: center;
@@ -524,7 +442,7 @@ input::placeholder {
   border-radius: 0.5rem;
   padding: 0.5rem;
   gap: 0.5rem;
-  box-shadow: 0 0 0.5rem #fff;
+  box-shadow: 0 0 0.5rem yellow;
 }
 .sigueme p {
   color: black;
@@ -538,6 +456,7 @@ input::placeholder {
   justify-content: center;
   align-items: center;
   border-radius: 100%;
+  color: #ffffff;
 }
 
 .fa-instagram {
@@ -550,22 +469,17 @@ input::placeholder {
     #7540a1,
     #5443a8
   );
-  color: #ffffff;
+  
 }
-
 .fa-facebook {
-  background: #1e4595;
-  color: #ffffff;
+  background: #1e4595;  
 }
-
 .fa-facebook:hover {
   background: #0655f3;
 }
-
 .fa-twitter,
 .fa-github {
-  background: linear-gradient(to right top, #42a9ec, #358de6);
-  color: #ffffff;
+  background: linear-gradient(to right top, #42a9ec, #358de6); 
 }
 
 .fa-twitter:hover,
