--- a/views/notas/detalleNota.ejs
+++ b/views/notas/detalleNota.ejs
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('../partials/head') %>
+<%- include('../partials/head') %>
 
-  <body>
-    <section id="contenedor" class="container">
-      <div class="centro index">
-        <h1 class="detalle">Detalle de la nota '<%= notas.titulo %>'</h1>
-        <h4 class="detalle">Creada el '<%= notas.creacion %>'</h4>
-        
-        <a href="/" class="volver detalle">
-          <i class="fas fa-home fa-2x"></i>
-        </a>
-        
-        <div id="guardada">
-          
-          <div class="abrirNuevo">
-            <h2><%= notas.titulo %></h2>
-            <p><%= notas.textarea %></p>
-          </div>
-          <a href="/notas/formularioNota"
-            ><button class="btn-1"><i class="fas fa-pencil fa-2x"></i></button
-          ></a>
+<body>
+    <%- include('../partials/header') %>
+    <div class="centro contenedorDetalle">
+      <a href="/" class="home detalleNota">
+        <i class="fas fa-home fa-2x"></i>
+      </a>
+      <h1 class="detalleNota">Detalle de la nota '<%= notas.titulo %>'</h1>
+      <h4 class="detalleNota">Creada el '<%= notas.creacion %>'</h4>
+
+      <div id="guardada">
+        <div class="abrirNuevo">
+          <h2>
+            <%= notas.titulo %>
+          </h2>
+          <p>
+            <%= notas.textarea %>
+          </p>
         </div>
+        <a href="/notas/formularioNota">
+          <button class="btn-1">
+            <i class="fas fa-pencil fa-2x">
+            </i>
+          </button>
+        </a>
       </div>
-    </section>
-  </body>
+    </div>
+<%- include('../partials/footer') %>
+</body>
+
 </html>
