--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,29 +1,28 @@
 <header>
-  <div class="logo-h1">
-    <img src="/img/logo-PhotoRoom.png-PhotoRoom.png" alt="Logo" />
+  <div class="headerContenido">
+    <i class="fas fa-book fa-4x"></i>
     <h1>Bloc de Notas</h1>
   </div>
   <nav class="navbar">
-    <ul class="principalUl">
-      <li class="dropdown navbar-content">
+    <ul class="navbarContenido">
+      <li class="dropdown navbar-li">
         <a href="#">Editar</a>
-        <ul>
-          <li class="editar-content">Color</li>
-          <li class="editar-content">Fuente</li>
-          <li class="editar-content">Fondo</li>
+        <ul class="dropdownContenido">
+          <li class="dropdownLi">Color</li>
+          <li class="dropdownLi">Fuente</li>
+          <li class="dropdownLi">Fondo</li>
         </ul>
       </li>
 
-      <li class="navbar-content">
+      <li class="navbar-li">
         <a href="/preguntas">Preguntas Frecuentes</a>
       </li>
 
-      <li class="navbar-content">
-        <a href="/inicioSesion">Iniciar Sesión</a>
+      <li class="navbar-li">
+        <a href="/usuario/iniciarSesion">Iniciar Sesión</a>
       </li>
     </ul>
-
-    <div class="principalColores">
+    <div class="contenedorColores">
       <div
         class="yellow contenedorColor"
         onclick="cambiarColorCuerpo('yellow')"
