--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <%- include('./partials/head') %>
-
   <body>
     <%- include('./partials/header') %>
     <!-- PLANTILLA -->
@@ -9,8 +8,8 @@
         <h3>Fijadas</h3>
         <div id="guardada">
           <%- include('./partials/cicloForNotas') %>
-          <a href="/notas/formularioNota">
-            <button class="btn-1"><i class="fas fa-edit fa-2x"></i></button>
+          <a href="/notas/formularioNota" class="btn-1">
+            <i class="fas fa-edit fa-2x"></i>
           </a>
         </div>
       </div>
