--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,27 +3,21 @@
   <div class="icon-footer">
     <div class="sigueme">
       <p>instagram</p>
-      <a href="http://www.instagram.com/jesuslotito" target="_blank"
-        ><i class="fa-brands fa-instagram"></i
-      ></a>
+      <a href="http://www.instagram.com/jesuslotito" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
     </div>
     <div class="sigueme">
       <p>facebook</p>
-      <a href="http://www.facebook.com/jesus.dominguez.5439" target="_blank"
-        ><i class="fa-brands fa-facebook"></i
-      ></a>
+      <a href="http://www.facebook.com/jesus.dominguez.5439" target="_blank"><i class="fa-brands fa-facebook"></i></a>
     </div>
     <div class="sigueme">
       <p>twitter</p>
-      <a href="http://www.twitter.com/dominguezj21" target="_blank"
-        ><i class="fa-brands fa-twitter"></i
-      ></a>
+      <a href="http://www.twitter.com/dominguezj21" target="_blank"><i class="fa-brands fa-twitter"></i></a>
     </div>
     <div class="sigueme">
       <p>github</p>
-      <a href="http://www.github.com/lotito30" target="_blank"
-        ><i class="fa-brands fa-github"></i
-      ></a>
+      <a href="http://www.github.com/lotito30" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
   </div>
   <p>Lotito30 © 2023. Todos los derechos reservados</p>
