--- a/views/usuario/inicioSesion.ejs
+++ b/views/usuario/inicioSesion.ejs
@@ -2,7 +2,7 @@
 <html>
   <%- include('../partials/head') %>
 
-  <body onload="inicio()">
+  <body onload="ususario()">
     <%- include('../partials/header') %>
 
         <div class="contenedor centro">
