--- a/views/usuario/recuperarContrasena.ejs
+++ b/views/usuario/recuperarContrasena.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include("../partials/head") %>
-<body>
+<body onload="ususario()">
 <%- include("../partials/header") %>
     
     <div class="contenedor centro">
