--- a/views/preguntas.ejs
+++ b/views/preguntas.ejs
@@ -8,7 +8,7 @@
       
     <!-- como hacer un index -->
       <div class="centro preguntas">
-        <a href="/" class="home">
+        <a href="/notas" class="home">
           <i class="fas fa-home fa-2x"></i>
         </a>
         <h2>Preguntas Frecuentes</h2>
