--- a/views/usuario/inicioSesion.ejs
+++ b/views/usuario/inicioSesion.ejs
@@ -6,7 +6,7 @@
     <%- include('../partials/header') %>
 
         <div class="contenedor centro">
-          <a href="/" class="home"
+          <a href="/notas" class="home"
             ><i class="fas fa-home fa-2x"></i
           ></a>
           <div class="contenedorContenido">
