--- a/views/notas/editarNota.ejs
+++ b/views/notas/editarNota.ejs
@@ -7,7 +7,7 @@
 
     
     <div class="centro contenedor">
-      <a href="/" class="home">
+      <a href="/notas" class="home">
         <i class="fas fa-home fa-2x"></i>
       </a>
       <div class="contenedorContenido">
