--- a/views/notas/formularioNota.ejs
+++ b/views/notas/formularioNota.ejs
@@ -4,7 +4,7 @@
   <body>
     <%- include('../partials/header') %>
     <div class="centro contenedor">
-      <a href="/" class="home">
+      <a href="/notas" class="home">
         <i class="fas fa-home fa-2x"></i>
       </a>
       <div class="contenedorContenido"> 
