--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
       <div class="centro">
         <h3>Fijadas</h3>
         <div id="guardada">
-          <%- include('./partials/cicloForNotas') %>
+          <%- include('./partials/mapNotas') %>
           <a href="/notas/formularioNota" class="btn-1">
             <i class="fas fa-edit fa-2x"></i>
           </a>
