--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,6 +23,7 @@
       </li>
     </ul>
     <div class="contenedorColores">
+      <span class="icono-menu"><i class="fa-solid fa-circle fa-2x"></i></span>
       <div
         class="yellow contenedorColor"
         onclick="cambiarColorCuerpo('yellow')"
