--- a/views/notas/detalleNota.ejs
+++ b/views/notas/detalleNota.ejs
@@ -12,10 +12,10 @@
       <h4 class="detalleNota">Creada el '<%= notas.creacion %>'</h>
 
       <div id="guardada">
-        <p class="detalleNota">Contenido:</p>
-          <p class="detalleNota">
-            <%= notas.textarea %>
-          </p>
+        <p class="detalleNota">
+          Contenido: <%= notas.textarea %> 
+        </p>
+
       </div>
         <a href="/notas/formularioNota">
           <button class="btn-1">
